[package]
name = "deployment-withlazers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.11", features = ["derive"] }
kube = { version = "0.75.0", features = ["derive", "runtime"] }
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
git2 = "0.15.0"
