[package]
name = "deployment-withlazers"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "deploy"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.11", features = ["derive"] }
kube = { version = "0.75.0", features = ["derive", "runtime"] }
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
git2 = "0.15.0"
tempfile = "3.3.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
